--- a/react-frontend/ping-react-frontend/src/App.css
+++ b/react-frontend/ping-react-frontend/src/App.css
@@ -2,6 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+
+.action-bar-btn {
+  position: relative;
+  top: 20%;
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+.action-bar {
+  width: 100%;
+  height: 5rem;
+  background-color: #282c34;
+}
+
 .App {
   text-align: center;
 }
