--- a/react-frontend/ping-react-frontend/src/App.css
+++ b/react-frontend/ping-react-frontend/src/App.css
@@ -2,6 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
+.modal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 1;
+  z-index: 100;
+}
+
+.modal-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgb(38, 24, 24);
+  padding: 1rem 1.5rem;
+  width: 24rem;
+  border-radius: 0.5rem;
+  z-index: 101;
+}
+
 .body-row {
   height: 100%;
   width: 100%;
