--- a/react-frontend/ping-react-frontend/src/App.css
+++ b/react-frontend/ping-react-frontend/src/App.css
@@ -3,14 +3,14 @@
 @tailwind utilities;
 
 .modal {
-  position: fixed;
+  position: absolute;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   opacity: 1;
-  z-index: 100;
+  z-index: 0;
 }
 
 .modal-content {
@@ -22,7 +22,7 @@
   padding: 1rem 1.5rem;
   width: 24rem;
   border-radius: 0.5rem;
-  z-index: 101;
+  z-index: 1;
 }
 
 .body-row {
